# chat-to-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BROWSER_INTELLIGENCE_OS.md  BROWSER_INTELLIGENCE_STATE.md  README.md  USAGE.md  chatgpt_auth.json  opencode.json  pyproject.toml  pytest.ini  ui_adapter_results.json
.deepseek/pastes/: paste-2026-06-04-230719-1746ca8e.md
.deepseek/state/: subagents.v1.json
ai_orchestrator/: __init__.py
ai_orchestrator/adapters/: __init__.py  auto_cookie_update.py  base.py  chatgpt_api.py  chatgpt_ui.py  cookie_to_storage_state.py  cookie_validator.py  deepseek_api.py  deepseek_ui.py  engine_adapter.py  errors.py  kimi_api.py  kimi_ui.py  local_llm.py  minimax_ui.py  popup_manager.py  qwen_api.py  qwen_ui.py  recovery_engine.py  xiaomimimo_ui.py  zai_ui.py
ai_orchestrator/agents/: __init__.py  base.py  coder.py  executor.py  fixer.py  planner.py  researcher.py  reviewer.py  tester.py
ai_orchestrator/browser/: __init__.py  accessibility.py  intelligence.py  schema.py  selector_cache.py
ai_orchestrator/browser_intelligence/: __init__.py  engine.py  pool.py
ai_orchestrator/memory/: __init__.py  hot_warm_cold.py  summarizer.py  token_budget.py
ai_orchestrator/models/: __init__.py  account.py  capabilities.py  lease.py  task.py
ai_orchestrator/observability/: __init__.py  logging.py  metrics.py  telemetry.py
ai_orchestrator/orchestrator/: __init__.py  control_plane.py  dlq.py  lease_manager.py  main.py  openai_compat.py  provider_health.py  provider_router.py  resource_scheduler.py  workflow_engine.py
ai_orchestrator/runtime/: __init__.py  loop.py  types.py
ai_orchestrator/security/: __init__.py  prompt_guard.py  sandbox.py  vault.py
ai_orchestrator/storage/: __init__.py  (+3 more)
benchmarks/: benchmark_runtime.py
diagnostic_output/: all_diagnostic.json  all_providers_test.json  chatgpt_ui_diagnostic.json  deepseek_ui_diagnostic.json  deepseek_ui_report.json  full_provider_test.json  kimi_ui_diagnostic.json  kimi_ui_report.json  minimax_ui_diagnostic.json  qwen_ui_diagnostic.json  xiaomimimo_ui_diagnostic.json  z_ai_ui_diagnostic.json  z_ai_ui_report.json
docker/: Dockerfile  docker-compose.yml  redis-sentinel.conf
docs/: ARCHITECTURE_REPORT.md  FORENSIC_AUDIT.md
monitoring/: otel-collector.yml  prometheus.yml
profiles/: chatgpt_cookies.txt  deepseek_auth.json  deepseek_cookies.txt  deepseek_ui_cookies.txt  kimi_auth.json  kimi_cookies.txt  kimi_ui_cookies.txt  minimax_auth.json  minimax_cookies.txt  minimax_ui_cookies.txt  qwen_ui_cookies.txt  xiaomimimo_auth.json  xiaomimimo_cookies.txt  xiaomimimo_ui_cookies.txt  z_ai_auth.json  z_ai_ui_cookies.txt  zai_cookies.txt
scripts/: check_browser.py  diagnose_all_providers.py  diagnose_zai.py  diagnose_zai_extraction.py  live_test.py  parse_usage_cookies.py  quick_test.py  run.sh  run_parallel_fanout.py  setup.sh  test_all_providers_real.py  test_all_ui_adapters.py  test_minimax_single.py  test_other_providers.py
(+91 files in other folders)
